CREATE TABLE "Cliente" (
  "cliente_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nombre" varchar(100) NOT NULL,
  "apellido" varchar(100) NOT NULL,
  "email" varchar(255) UNIQUE NOT NULL,
  "telefono" varchar(20),
  "fecha_registro" timestamp
);

CREATE TABLE "Marca" (
  "marca_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nombre_marca" varchar(100) UNIQUE NOT NULL
);

CREATE TABLE "Producto" (
  "producto_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nombre_producto" varchar(255) NOT NULL,
  "descripcion" text,
  "precio" decimal(10,2) NOT NULL,
  "stock" int DEFAULT 0,
  "marca_id" int NOT NULL
);

CREATE TABLE "Pedido" (
  "pedido_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "cliente_id" int NOT NULL,
  "fecha_pedido" timestamp,
  "estado" varchar(50)
);

CREATE TABLE "Detalle_Pedido" (
  "detalle_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "pedido_id" int NOT NULL,
  "producto_id" int NOT NULL,
  "cantidad" int NOT NULL,
  "precio_unitario" decimal(10,2) NOT NULL
);

ALTER TABLE "Producto" ADD FOREIGN KEY ("marca_id") REFERENCES "Marca" ("marca_id");

ALTER TABLE "Pedido" ADD FOREIGN KEY ("cliente_id") REFERENCES "Cliente" ("cliente_id");

ALTER TABLE "Detalle_Pedido" ADD FOREIGN KEY ("pedido_id") REFERENCES "Pedido" ("pedido_id");

ALTER TABLE "Detalle_Pedido" ADD FOREIGN KEY ("producto_id") REFERENCES "Producto" ("producto_id");
