// --- Tabla Cliente ---
Table Cliente {
  cliente_id int [pk, increment]
  nombre varchar(100) [not null]
  apellido varchar(100) [not null]
  email varchar(255) [unique, not null]
  telefono varchar(20)
  fecha_registro timestamp
}

// --- Tabla Marca ---
Table Marca {
  marca_id int [pk, increment]
  nombre_marca varchar(100) [unique, not null]
}

// --- Tabla Producto ---
Table Producto {
  producto_id int [pk, increment]
  nombre_producto varchar(255) [not null]
  descripcion text
  precio decimal(10, 2) [not null]
  stock int [default: 0]
  marca_id int [not null]
}

// --- Tabla Pedido ---
Table Pedido {
  pedido_id int [pk, increment]
  cliente_id int [not null]
  fecha_pedido timestamp
  estado varchar(50)
}

// --- Tabla Asociativa ---
Table Detalle_Pedido {
  detalle_id int [pk, increment]
  pedido_id int [not null]
  producto_id int [not null]
  cantidad int [not null]
  precio_unitario decimal(10, 2) [not null]
}

// --- Relaciones ---
Ref: Producto.marca_id > Marca.marca_id
Ref: Pedido.cliente_id > Cliente.cliente_id
Ref: Detalle_Pedido.pedido_id > Pedido.pedido_id
Ref: Detalle_Pedido.producto_id > Producto.producto_id